[gd_scene load_steps=4 format=3 uid="uid://caajyg0wa5pjw"]

[ext_resource type="Theme" uid="uid://cytrqyn3gsxmg" path="res://ui_theme.tres" id="1_2ahqc"]
[ext_resource type="Script" path="res://menus/options.gd" id="2_hr2yx"]
[ext_resource type="PackedScene" uid="uid://ge36ui6fwwft" path="res://menus/lang_selector.tscn" id="5_xu5th"]

[node name="Options" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2ahqc")
theme_override_constants/separation = 20
script = ExtResource("2_hr2yx")

[node name="Title" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "MENU_OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VboxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Video" type="OptionButton" parent="VboxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
selected = 0
popup/item_0/text = "OPTION_FULLSCREEN"
popup/item_0/id = 0
popup/item_1/text = "OPTION_BORDERLESS"
popup/item_1/id = 1
popup/item_2/text = "OPTION_WINDOWED"
popup/item_2/id = 2

[node name="SoundContainer" type="HBoxContainer" parent="VboxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VboxContainer/SoundContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "OPTION_SFX"

[node name="Sound" type="HSlider" parent="VboxContainer/SoundContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 51)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MusicContainer" type="HBoxContainer" parent="VboxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VboxContainer/MusicContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "OPTION_MUSIC"

[node name="Music" type="HSlider" parent="VboxContainer/MusicContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 51)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="VSync" type="CheckButton" parent="VboxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "V-Sync"

[node name="LangSelector" parent="VboxContainer" instance=ExtResource("5_xu5th")]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VboxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="Save" type="Button" parent="VboxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_SAVE"

[connection signal="item_selected" from="VboxContainer/Video" to="." method="_on_Video_item_selected"]
[connection signal="value_changed" from="VboxContainer/SoundContainer/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="VboxContainer/MusicContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="toggled" from="VboxContainer/VSync" to="." method="_on_VSync_toggled"]
[connection signal="pressed" from="VboxContainer/MarginContainer/Save" to="." method="_on_Save_pressed"]
